// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompoundField Component matches snapshot when disabled 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#303030",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "opacity": 0.6,
    }
  }
>
  <Text
    isFirst={true}
    isLast={true}
  >
    Child Content
  </Text>
</View>
`;

exports[`CompoundField Component matches snapshot when enabled 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#303030",
      "borderBottomLeftRadius": 10,
      "borderBottomRightRadius": 10,
      "borderColor": "#BABABA",
      "borderStyle": "solid",
      "borderTopLeftRadius": 10,
      "borderTopRightRadius": 10,
      "borderWidth": 1,
      "opacity": 1,
    }
  }
>
  <Text
    isFirst={true}
    isLast={true}
  >
    Child Content
  </Text>
</View>
`;
